# AIGrepolisGameBot

./: .gitignore  README.md  check_mouse.py  config.yaml  loop_clicking.py  pyproject.toml
grebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grepobot/: __main__.py  action.py  brain.py  event.py  game.py  game_object.py  match.py  mouse_manager.py  registry.py  screen.py
grepobot/config/: __init__.py  actions.yaml  events.yaml
grepobot/utils/: common.py
